Deleting the script.js and new scripts added in index.html

--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>JS Grundlagen</title>
 
-    <script src="script.js" defer></script>
+    <script src="basics.js" defer></script>
+    <script src="string_numbers.js" defer></script>
   </head>
   <body></body>
 </html>
